severstal best deal fix (set overflow visible on parent element and hide corners with :before and :after with same color as background)

--- a/severstal-avia.ru/index.sass
+++ b/severstal-avia.ru/index.sass
@@ -184,3 +184,34 @@ $calendarWeekEndColor: rgba($blueBrandColor, .7)
     position: absolute
 
 /* ==== END #38161 ==== */
+
+/* ==== best deal ==== */
+
+.flightTable table > tbody > tr.headrow > td:not(:first-child)
+  overflow: visible
+
+.flightTable .columnTitle
+  .best
+    &:before,
+    &:after
+      content: ''
+      position: absolute
+      transform: rotate(-45deg)
+    &:before
+      top: -24px
+      width: 100px
+      height: 20px
+      right: 0
+      background: #ffffff
+    &:after
+      right: -13px
+      top: -20px
+      height: 50px
+      width: 20px
+      background: #c2d69b
+
+
+
+
+
+/* ==== END best deal ==== */
